Sonar: Fikser feil fra sonar * Innfører static klasser * Trekker ut i egne metoder der det er hensiktsmessig * Endrer til å bruke KodeEndring.NY i tester i stedet for KodeEndring.UEND, fordi UEND ikke er i bruk * .get(0)/.iterator().next() -> .getFirst()